[tool.poetry]
name = "finbody-10k"
version = "0.1.0"
description = ""
authors = ["Ahmet Çağatay Savaşlı <cagatay.savasli@ozu.edu.tr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
streamlit = "^1.44.0"
google-generativeai = "^0.8.4"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
